--- a/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
+++ b/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
@@ -1,7 +1,7 @@
 
     <ng-template #loading>No se han encontrado registros...</ng-template>
 
-    <div *ngIf="load$ | async; else loading" class="table-responsive">
+    <div *ngIf="((data$ | async) && (data$ | async).length) ; else loading" class="table-responsive">
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
@@ -18,9 +18,9 @@
                 <br>{{row.plan_.orientacion}}
               </td>
               <td>
-                <div *ngFor="let curso of (curso_$ | async)[row.id]; let j = index">
+                <!--div *ngFor="let curso of (curso_$ | async)[row.id]; let j = index">
                   {{curso.id}}
-                </div>
+                </div-->
               </td>
 
               <td>
