--- a/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
+++ b/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
@@ -13,9 +13,9 @@
         </thead>
         <tbody>
           <tr *ngFor="let row of (data$ | async); let i = index">
-              <td><a [routerLink]="['/sede-show']" [queryParams]="{id:row.sede}" >{{row.sede | label:'sede'}}</a></td>
-              <td>{{row.id | label:'comision'}}
-                <br>{{row.plan_.orientacion}}
+              <td><a [routerLink]="['/sede-show']" [queryParams]="{id:row.comision_.sede}" >{{row.comision_.sede | label:'sede'}}</a></td>
+              <td>{{row.comision | label:'comision'}}
+                <!--br>{{row.comision_.plan_.orientacion}}-->
               </td>
               <td>
                 <!--div *ngFor="let curso of (curso_$ | async)[row.id]; let j = index">
