--- a/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
+++ b/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
@@ -2,7 +2,7 @@
   <div class="form-inline">
     <div class="form-group mb-2">
       <label class="col-form-label">Turno:</label>
-      <select class="form-control" formControlName="com_turno">
+      <select class="form-control" formControlName="turno">
         <option [ngValue]="null">--Turno--</option>
             <option value="Mañana">Mañana</option>
             <option value="Tarde">Tarde</option>
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Año:</label>
-      <select class="form-control" formControlName="com_anio">
+      <select class="form-control" formControlName="anio">
         <option [ngValue]="null">--Año--</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Semestre:</label>
-      <select class="form-control" formControlName="com_semestre">
+      <select class="form-control" formControlName="semestre">
         <option [ngValue]="null">--Semestre--</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Autorizada</label>
-      <select class="form-control" formControlName="com_autorizada">
+      <select class="form-control" formControlName="autorizada">
         <option [ngValue]="null">--Todos--</option>
         <option [ngValue]="'true'">Sí</option>
         <option [ngValue]="'false'">No</option>
@@ -36,7 +36,7 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Apertura</label>
-      <select class="form-control" formControlName="com_apertura">
+      <select class="form-control" formControlName="apertura">
         <option [ngValue]="null">--Todos--</option>
         <option [ngValue]="true">Sí</option>
         <option [ngValue]="false">No</option>
@@ -44,7 +44,7 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Publicada</label>
-      <select class="form-control" formControlName="com_publicada">
+      <select class="form-control" formControlName="publicada">
         <option [ngValue]="null">--Todos--</option>
         <option [ngValue]="true">Sí</option>
         <option [ngValue]="false">No</option>
@@ -52,11 +52,11 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Fecha anio</label>
-      <input class="form-control" placeholder="yyyy" type="text" formControlName="com_fecha_anio">
+      <input class="form-control" placeholder="yyyy" type="text" formControlName="fecha_anio">
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Fecha Semestre:</label>
-      <select class="form-control" formControlName="com_fecha_semestre">
+      <select class="form-control" formControlName="fecha_semestre">
         <option [ngValue]="null">--Fecha Semestre--</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -64,25 +64,25 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Sede</label>
-      <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'sede'" [fieldName]="'com_sede'"></app-fieldset-typeahead>
+      <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'sede'" [fieldName]="'sede'"></app-fieldset-typeahead>
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Plan:</label>
-      <select class="form-control" formControlName="com_plan">
+      <select class="form-control" formControlName="plan">
         <option [ngValue]="null">--Plan--</option>
         <option *ngFor="let option of (options | async)?.plan" [value]="option.id" >{{option.id | label:"plan"}}</option>
       </select>
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Modalidad:</label>
-      <select class="form-control" formControlName="com_modalidad">
+      <select class="form-control" formControlName="modalidad">
         <option [ngValue]="null">--Modalidad--</option>
         <option *ngFor="let option of (options | async)?.modalidad" [value]="option.id" >{{option.id | label:"modalidad"}}</option>
       </select>
     </div>
     <div class="form-group mb-2">
         <label class="col-form-label">Centro Educativo</label>
-        <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'centro_educativo'" [fieldName]="'com_sed_centro_educativo'"></app-fieldset-typeahead>
+        <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'centro_educativo'" [fieldName]="'sed_centro_educativo'"></app-fieldset-typeahead>
       </div>
   </div>
 </fieldset>
