--- a/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
+++ b/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
@@ -38,16 +38,16 @@
       <label class="col-form-label">Apertura</label>
       <select class="form-control" formControlName="apertura">
         <option [ngValue]="null">--Todos--</option>
-        <option [ngValue]="true">Sí</option>
-        <option [ngValue]="false">No</option>
+        <option [ngValue]="'true'">Sí</option>
+        <option [ngValue]="'false'">No</option>
       </select>
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Publicada</label>
       <select class="form-control" formControlName="publicada">
         <option [ngValue]="null">--Todos--</option>
-        <option [ngValue]="true">Sí</option>
-        <option [ngValue]="false">No</option>
+        <option [ngValue]="'true'">Sí</option>
+        <option [ngValue]="'false'">No</option>
       </select>
     </div>
     <div class="form-group mb-2">
