--- a/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
+++ b/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
@@ -1,23 +1,13 @@
 
     <ng-template #loading>No se han encontrado registros...</ng-template>
 
-    <div *ngIf="((data$ | async) && (data$ | async).length) ; else loading" class="table-responsive">
-      <table class="table table-striped table-bordered table-hover">
-        <thead>
-          <tr>
-            <th>Sede</th>
-            <th>Comision</th>
-            <th>Curso</th>
-            <th>Opciones</th>
-            </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let row of (data$ | async); let i = index">
-              <td><a [routerLink]="['/sede-show']" [queryParams]="{id:row.sede}" >{{row.sede | label:'sede'}}</a></td>
-              <td>{{row.id | label:'comision'}}
-                <!--br>{{row.comision_.plan_.orientacion}}-->
-              </td>
-              <td>
+    <div *ngIf="((data$ | async) && (data$ | async).length) ; else loading" class="container">
+      <div *ngFor="let row of (data$ | async); let i = index" class="row align-items-center border">      
+              <div class="col-4">
+                    <h5 >{{row.id | label:'comision'}}</h5>              
+                    <p ><a [routerLink]="['/sede-show']" [queryParams]="{id:row.sede}" >{{row.sede | label:'sede'}}</a></p>
+              </div>
+              <div class="col-8">
                 <ng-template #sincursos>Sin cursos</ng-template>
 
                 <div *ngIf="(curso_$[row.id] | async) ; else sincursos">
@@ -41,14 +31,6 @@
                 <!--div *ngFor="let curso of (curso_$ | async)[row.id]; let j = index">
                   {{curso.id}}
                 </div-->
-              </td>
-
-              <td>
-              <!-- a class="btn btn-info btn-sm" [routerLink]="['/comision-detail']" [queryParams]="{id:row.id}" ><span class="oi oi-eye" title="Detalle"></span></a>    
-              <a class="btn btn-warning btn-sm" [routerLink]="['/comision-admin']" [queryParams]="{id:row.id}" ><span class="oi oi-pencil" title="Modificar"></span></a>              
-              <!-- button class="btn btn-danger btn-sm" type="button" (click)="delete(i)"><span class="oi oi-trash" title="Eliminar"></span></button -->
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              </div>
+      </div>
     </div>
