--- a/src/app/component/consolidado/consolidado-search/consolidado-search/consolidado-search.component.html
+++ b/src/app/component/consolidado/consolidado-search/consolidado-search/consolidado-search.component.html
@@ -7,7 +7,7 @@
     <ng-template ngbPanelContent>
       <form [formGroup]="searchForm" novalidate (ngSubmit)="onSubmit()">       
         <!--app-search-all [form]="searchForm" [data$]="params$"></app-search-all-->
-        <app-consolidado-search-params [form]="searchForm" [data$]="params$"></app-consolidado-search-params>
+        <app-consolidado-search-params [form]="searchForm" [params$]="params$"></app-consolidado-search-params>
         <!--app-sede-search-condition [form]="searchForm" [data$]="condition$"></app-sede-search-condition-->
         <div class="ml-5">
           <button type="submit" class="btn btn-primary btn-sm">Buscar <span class="oi oi-magnifying-glass"></span></button>
