--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -13,28 +13,11 @@
         <a class="nav-link dropdown-toggle" id="dropdownVer" ngbDropdownToggle>Ver</a>
         <div class="dropdown-menu" ngbDropdownMenu aria-labelledby="dropdownVer">
           <a class="dropdown-item" routerLink="/consolidado" routerLinkActive="active" title="Consolidado" (click)="toggleMenu()">Consolidado</a>
-          <a class="dropdown-item" routerLink="/tipo-sede-show" routerLinkActive="active" title="Ver Tipo Sedes" (click)="toggleMenu()">Tipo Sede</a>
+          <a class="dropdown-item" routerLink="/grilla" routerLinkActive="active" title="Grilla" (click)="toggleMenu()">Grilla</a>
+          <a class="dropdown-item" routerLink="/tipo-sede-show" routerLinkActive="active" title="Tipo Sedes" (click)="toggleMenu()">Tipo Sede</a>
         </div>
       </div>  
       
-      <div class="nav-item dropdown" ngbDropdown >
-        <a class="nav-link dropdown-toggle" id="dropdownVer" ngbDropdownToggle>Nuevo</a>
-        <div class="dropdown-menu" ngbDropdownMenu aria-labelledby="dropdownVer">
-          <a class="dropdown-item" routerLink="/sede-admin" routerLinkActive="active" title="Nueva Sede" (click)="toggleMenu()">Sede</a>
-          <a class="dropdown-item" routerLink="/persona-admin" routerLinkActive="active" title="Nueva Persona" (click)="toggleMenu()">Persona</a>          
-          <a class="dropdown-item" routerLink="/comision-admin" routerLinkActive="active" title="Nueva Comisión" (click)="toggleMenu()">Comisión</a>
-          <a class="dropdown-item" routerLink="/comision-curso-admin" routerLinkActive="active" title="Nueva Comisión" (click)="toggleMenu()">Comisión + Cursos</a>
-          <a class="dropdown-item" routerLink="/curso-admin" routerLinkActive="active" title="Nuevo Curso" (click)="toggleMenu()">Curso</a>
-          <a class="dropdown-item" routerLink="/designacion-admin" routerLinkActive="active" title="Nueva Designación" (click)="toggleMenu()">Designación</a>
-          <a class="dropdown-item" routerLink="/centro-educativo-admin" routerLinkActive="active" title="Nuevo Centro Educativo" (click)="toggleMenu()">Centro Educativo</a>       
-          <a class="dropdown-item" routerLink="/tipo-sede-admin" routerLinkActive="active" title="Nuevo Tipo Sede" (click)="toggleMenu()">Tipo Sede</a>
-          <a class="dropdown-item" routerLink="/cargo-admin" routerLinkActive="active" title="Nuevo Cargo" (click)="toggleMenu()">Cargo</a>
-          <a class="dropdown-item" routerLink="/plan-admin" routerLinkActive="active" title="Nuevo Plan" (click)="toggleMenu()">Plan</a>
-          <a class="dropdown-item" routerLink="/asignatura-admin" routerLinkActive="active" title="Nuevo Asignatura" (click)="toggleMenu()">Asignatura</a>
-          <a class="dropdown-item" routerLink="/carga-horaria-admin" routerLinkActive="active" title="Nueva Carga Horaria" (click)="toggleMenu()">Carga Horaria</a>
-          <a class="dropdown-item" routerLink="/modalidad-admin" routerLinkActive="active" title="Nueva Modalidad" (click)="toggleMenu()">Modalidad</a>
-        </div>
-      </div>      
     </div>
   </div>
 </nav>
