--- a/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
+++ b/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
@@ -13,14 +13,13 @@
                 <div *ngIf="(curso_$[row.id] | async) ; else sincursos">
                   <ul class="list-group">
                     <div class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let c of (curso_$[row.id] | async); let j = index">
-                      <div class="d-flex w-100 justify-content-between">
-                        <b class="mb-1">{{c.carga_horaria_.asignatura_.nombre}}</b>
-                        <small>{{c.horario}}</small>
+                      <div>
+                        <b>{{c.carga_horaria_.asignatura_.nombre}}</b>&nbsp;<small>{{c.horario}}</small>
                       </div>
                       <ng-template #sintomas><small>Sin Tomas</small></ng-template>
                       
-                      <div *ngIf="(toma_$[c.id] | async) && (toma_$[c.id] | async).length; else sintomas">                    
-                        <div *ngFor="let t of (toma_$[c.id] | async); let k = index">
+                      <div *ngIf="toma(c.id).length; else sintomas">                    
+                        <div *ngFor="let t of toma(c.id); let k = index">
                           <small *ngIf="t.docente_">{{t.docente_.apellidos}} {{t.docente_.nombres}}</small>
                           <small *ngIf="t.observaciones">({{t.observaciones}})</small>                                                                 
                         </div>
