actualizar grilla-search

--- a/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
+++ b/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
@@ -85,4 +85,8 @@
         <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'centro_educativo'" [fieldName]="'sed_centro_educativo'"></app-fieldset-typeahead>
       </div>
   </div>
+
+  <p>Debug Form value: {{ fieldset.value | json }}</p> //fieldset
+    
 </fieldset>
+
