--- a/src/app/component/grilla-search/grilla-search-params/grilla-search-params.component.html
+++ b/src/app/component/grilla-search/grilla-search-params/grilla-search-params.component.html
@@ -2,11 +2,11 @@
   <div class="form-inline">
     <div class="form-group mb-2">
       <label class="col-form-label">Fecha anio</label>
-      <input class="form-control" placeholder="yyyy" type="text" formControlName="fecha_anio">
+      <input class="form-control" placeholder="yyyy" type="text" formControlName="com_fecha_anio">
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Fecha Semestre:</label>
-      <select class="form-control" formControlName="fecha_semestre">
+      <select class="form-control" formControlName="com_fecha_semestre">
         <option [ngValue]="null">--Fecha Semestre--</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -14,14 +14,14 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Modalidad:</label>
-      <select class="form-control" formControlName="modalidad">
+      <select class="form-control" formControlName="com_modalidad">
         <option [ngValue]="null">--Modalidad--</option>
         <option *ngFor="let option of (options | async)?.modalidad" [value]="option.id" >{{option.id | label:"modalidad"}}</option>
       </select>
     </div>
     <div class="form-group mb-2">
         <label class="col-form-label">Centro Educativo</label>
-        <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'centro_educativo'" [fieldName]="'sed_centro_educativo'"></app-fieldset-typeahead>
+        <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'centro_educativo'" [fieldName]="'com_sed_centro_educativo'"></app-fieldset-typeahead>
       </div>
   </div>
 </fieldset>
