--- a/src/app/component/grilla-search/grilla-search/grilla-search.component.html
+++ b/src/app/component/grilla-search/grilla-search/grilla-search.component.html
@@ -1,6 +1,6 @@
       <form [formGroup]="searchForm" novalidate (ngSubmit)="onSubmit()">       
         <!--app-search-all [form]="searchForm" [data$]="params$"></app-search-all-->
-        <app-grupo-search-params [form]="searchForm" [params$]="params$"></app-grupo-search-params>
+        <app-grilla-search-params [form]="searchForm" [params$]="params$"></app-grilla-search-params>
         <!--app-sede-search-condition [form]="searchForm" [data$]="condition$"></app-sede-search-condition-->
         <div class="ml-5">
           <button type="submit" class="btn btn-primary btn-sm">Buscar <span class="oi oi-magnifying-glass"></span></button>
