Incorporar ultimas actualizaciones del sistema de administracion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <br>
 <router-outlet></router-outlet>
 <br>
-<app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
+<app-toasts></app-toasts>
