--- a/src/app/component/consolidado/consolidado/consolidado.component.html
+++ b/src/app/component/consolidado/consolidado/consolidado.component.html
@@ -1,3 +1,2 @@
-<app-consolidado-search [condition$]="condition$" [params$]="params$" (searchChange)="searchChange($event)"></app-consolidado-search>
+<app-consolidado-search [params$]="params$" (searchChange)="searchChange($event)"></app-consolidado-search>
 <app-consolidado-table [data$]="data$" (orderChange)="orderChange($event)"></app-consolidado-table>
-<!--app-pagination [page]="display.page" [size]="display.size" [collectionSize$]="collectionSize$" (pageChange)="pageChange($event)"></app-pagination-->
