--- a/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
+++ b/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
@@ -1,12 +1,44 @@
 <fieldset [formGroup]="fieldset">
   <div class="form-inline">
     <div class="form-group mb-2">
-      <label class="col-form-label">Turno:</label>
-      <select class="form-control" formControlName="turno">
-        <option [ngValue]="null">--Turno--</option>
-            <option value="Mañana">Mañana</option>
-            <option value="Tarde">Tarde</option>
-            <option value="Noche">Noche</option>
+      <label class="col-form-label">Fecha anio</label>
+      <input class="form-control" placeholder="yyyy" type="text" formControlName="fecha_anio">
+    </div>
+    <div class="form-group mb-2">
+      <label class="col-form-label">Fecha Semestre:</label>
+      <select class="form-control" formControlName="fecha_semestre">
+        <option [ngValue]="null">--Fecha Semestre--</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+      </select>
+    </div>
+    <div class="form-group mb-2">
+      <label class="col-form-label">Centro Educativo:</label>
+      <select class="form-control" formControlName="sed_centro_educativo">
+        <option [ngValue]="null">--Centro Educativo--</option>
+        <option *ngFor="let option of (optCentroEducativo$ | async)" [value]="option.id" >{{option.id | label:"centro_educativo"}}</option>
+      </select>
+    </div>
+    <div class="form-group mb-2">
+      <label class="col-form-label">Modalidad:</label>
+      <select class="form-control" formControlName="modalidad">
+        <option [ngValue]="null">--Modalidad--</option>
+        <option *ngFor="let option of (optModalidad$ | async)" [value]="option.id" >{{option.id | label:"modalidad"}}</option>
+      </select>
+    </div>
+    <div class="form-group mb-2">
+      <label class="col-form-label">Número sede</label>
+      <input class="form-control" type="text" formControlName="sed_numero_trim">
+    </div>
+    <div class="form-group mb-2">
+      <label class="col-form-label">Sede</label>
+      <app-fieldset-typeahead [data$]="params$" [fieldset]="fieldset" [entityName]="'sede'" [fieldName]="'sede'"></app-fieldset-typeahead>
+    </div>
+    <div class="form-group mb-2">
+      <label class="col-form-label">Plan:</label>
+      <select class="form-control" formControlName="plan">
+        <option [ngValue]="null">--Plan--</option>
+        <option *ngFor="let option of (optPlan$ | async)" [value]="option.id" >{{option.id | label:"plan"}}</option>
       </select>
     </div>
     <div class="form-group mb-2">
@@ -24,6 +56,15 @@
         <option [ngValue]="null">--Semestre--</option>
             <option value="1">1</option>
             <option value="2">2</option>
+      </select>
+    </div>
+    <div class="form-group mb-2">
+      <label class="col-form-label">Turno:</label>
+      <select class="form-control" formControlName="turno">
+        <option [ngValue]="null">--Turno--</option>
+            <option value="Mañana">Mañana</option>
+            <option value="Tarde">Tarde</option>
+            <option value="Noche">Noche</option>
       </select>
     </div>
     <div class="form-group mb-2">
@@ -50,43 +91,6 @@
         <option [ngValue]="'false'">No</option>
       </select>
     </div>
-    <div class="form-group mb-2">
-      <label class="col-form-label">Fecha anio</label>
-      <input class="form-control" placeholder="yyyy" type="text" formControlName="fecha_anio">
-    </div>
-    <div class="form-group mb-2">
-      <label class="col-form-label">Fecha Semestre:</label>
-      <select class="form-control" formControlName="fecha_semestre">
-        <option [ngValue]="null">--Fecha Semestre--</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-      </select>
-    </div>
-    <div class="form-group mb-2">
-      <label class="col-form-label">Sede</label>
-      <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'sede'" [fieldName]="'sede'"></app-fieldset-typeahead>
-    </div>
-    <div class="form-group mb-2">
-      <label class="col-form-label">Plan:</label>
-      <select class="form-control" formControlName="plan">
-        <option [ngValue]="null">--Plan--</option>
-        <option *ngFor="let option of (options | async)?.plan" [value]="option.id" >{{option.id | label:"plan"}}</option>
-      </select>
-    </div>
-    <div class="form-group mb-2">
-      <label class="col-form-label">Modalidad:</label>
-      <select class="form-control" formControlName="modalidad">
-        <option [ngValue]="null">--Modalidad--</option>
-        <option *ngFor="let option of (options | async)?.modalidad" [value]="option.id" >{{option.id | label:"modalidad"}}</option>
-      </select>
-    </div>
-    <div class="form-group mb-2">
-        <label class="col-form-label">Centro Educativo</label>
-        <app-fieldset-typeahead [fieldset]="fieldset" [entityName]="'centro_educativo'" [fieldName]="'sed_centro_educativo'"></app-fieldset-typeahead>
       </div>
-  </div>
-
-  <p>Debug Form value: {{ fieldset.value | json }}</p> //fieldset
-    
 </fieldset>
 
