--- a/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
+++ b/src/app/component/consolidado/consolidado-search/consolidado-search-params/consolidado-search-params.component.html
@@ -2,11 +2,11 @@
   <div class="form-inline">
     <div class="form-group mb-2">
       <label class="col-form-label">Fecha anio</label>
-      <input class="form-control" placeholder="yyyy" type="text" formControlName="fecha_anio">
+      <input class="form-control" placeholder="yyyy" type="text" formControlName="cal_anio">
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Fecha Semestre:</label>
-      <select class="form-control" formControlName="fecha_semestre">
+      <select class="form-control" formControlName="cal_semestre">
         <option [ngValue]="null">--Fecha Semestre--</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -36,14 +36,14 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Plan:</label>
-      <select class="form-control" formControlName="plan">
+      <select class="form-control" formControlName="pla_plan">
         <option [ngValue]="null">--Plan--</option>
         <option *ngFor="let option of (optPlan$ | async)" [value]="option.id" >{{option.id | label:"plan"}}</option>
       </select>
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Año:</label>
-      <select class="form-control" formControlName="anio">
+      <select class="form-control" formControlName="pla_anio">
         <option [ngValue]="null">--Año--</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -52,7 +52,7 @@
     </div>
     <div class="form-group mb-2">
       <label class="col-form-label">Semestre:</label>
-      <select class="form-control" formControlName="semestre">
+      <select class="form-control" formControlName="pla_semestre">
         <option [ngValue]="null">--Semestre--</option>
             <option value="1">1</option>
             <option value="2">2</option>
