Incorporar valores por defecto en el menu para consolidado

--- a/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
+++ b/src/app/component/consolidado/consolidado-table/consolidado-table.component.html
@@ -4,9 +4,10 @@
 <div *ngIf="comisiones$ | async as comisiones else loading">
   <div *ngFor="let c of comisiones; let i = index" class="row align-items-center border">
     <div class="col-4">
-      <h5>{{c.id | label:'comision'}} <span *ngIf="row.apertura">(APERTURA)</span></h5>              
+      <h5>{{c.id | label:'comision'}} <span *ngIf="c.apertura">(APERTURA)</span></h5>              
       <p>{{c.sede | label:'sede'}}</p>
-      <br><small>{{c.plan | label:'plan'}}</small>
+      <div><small>{{c.planificacion_.plan | label:'plan'}}</small></div>
+      <div><small>{{c.calendario_.anio}}-{{c.calendario_.semestre}}</small></div> 
     </div>
     <div class="col-8">
       <ng-template #sincursos>Sin cursos</ng-template>
