--- a/src/app/component/grilla-search/grilla-search-params/grilla-search-params.component.html
+++ b/src/app/component/grilla-search/grilla-search-params/grilla-search-params.component.html
@@ -16,7 +16,7 @@
       <label class="col-form-label">Modalidad:</label>
       <select class="form-control" formControlName="com_modalidad">
         <option [ngValue]="null">--Modalidad--</option>
-        <option *ngFor="let option of (options | async)?.modalidad" [value]="option.id" >{{option.id | label:"modalidad"}}</option>
+        <option *ngFor="let option of (optModalidad$ | async)" [value]="option.id" >{{option.id | label:"modalidad"}}</option>
       </select>
     </div>
     <div class="form-group mb-2">
